[package]
name = "polygon-crunchyroll-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
crunchyroll-rs = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
rfd = "0.14"

